--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
         <jquery.version>3.4.1</jquery.version>
         <webjars-admin-lte.version>2.3.11</webjars-admin-lte.version>
         <webjars-font-awesome.version>4.7.0</webjars-font-awesome.version>
+        <poi-ooxml.version>4.1.1</poi-ooxml.version>
     </properties>
 
     <!-- 依赖管理 -->
@@ -185,7 +186,7 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>4.1.1</version>
+            <version>${poi-ooxml.version}</version>
         </dependency>
     </dependencies>
 
