--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,15 +1,14 @@
+# 生产环境配置
 spring:
   mvc:
     view:
-      # 页面解析前綴
       prefix: /WEB-INF/views/
-      # 页面解析后缀
       suffix: .jsp
 
   # 数据源
   datasource:
-    driverClassName: com.p6spy.engine.spy.P6SpyDriver
-    url: jdbc:p6spy:mysql://localhost:3306/exam-system-test?characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql:///merbac?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
+    driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 123456
     hikari:
@@ -25,27 +24,22 @@ spring:
   # devtools
   devtools:
     livereload:
-      enabled: true
+      enabled: false
 
 # mybatis-plus
 mybatis-plus:
   global-config:
-    # 关闭 mybatis-plus的 banner
     banner: off
-  # 实体类别名
   type-aliases-package: com.exam.entity
   configuration:
-    # 驼峰命名
     map-underscore-to-camel-case: true
 
 # PageHelper 分页插件
 pagehelper:
-  # 禁用合理化时，如果pageNum<1或pageNum>pages会返回空数据
   reasonable: false
   support-methods-arguments: true
   params: count=countSql
   row-bounds-with-count: true
-  # 数据库方言
   helper-dialect: mysql
 
 # 服务器端口
@@ -53,9 +47,4 @@ server:
   port: 8080
   servlet:
     session:
-      # session 过期时间 30 分钟
-      timeout: PT30M
-
-  # tomcat 编码
-  tomcat:
-    uri-encoding: utf-8
+      timeout: PT60M
