--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -7,7 +7,7 @@ spring:
 
   # 数据源
   datasource:
-    url: jdbc:mysql:///merbac?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql:///exam-system-test?characterEncoding=utf8&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 123456
@@ -20,11 +20,6 @@ spring:
       minimum-idle: 10
       maximum-pool-size: 10
       read-only: off
-
-  # devtools
-  devtools:
-    livereload:
-      enabled: false
 
 # mybatis-plus
 mybatis-plus:
