--- a/pom.xml
+++ b/pom.xml
@@ -37,18 +37,16 @@
     <!-- 相关依赖统一版本管理 -->
     <properties>
         <java.version>1.8</java.version>
-        <hutool.version>5.1.2</hutool.version>
+        <hutool.version>5.1.3</hutool.version>
         <mysql-driver.version>5.1.48</mysql-driver.version>
         <mybatis-plus.version>3.3.1</mybatis-plus.version>
         <guava.version>28.2-jre</guava.version>
         <joda-time.version>2.10.5</joda-time.version>
         <pageHelper.version>1.2.13</pageHelper.version>
-        <p6spy.version>3.8.7</p6spy.version>
         <commons-text.version>1.8</commons-text.version>
-        <jquery.version>3.4.1</jquery.version>
         <webjars-admin-lte.version>2.3.11</webjars-admin-lte.version>
         <webjars-font-awesome.version>4.7.0</webjars-font-awesome.version>
-        <poi-ooxml.version>4.1.1</poi-ooxml.version>
+        <poi-ooxml.version>4.1.2</poi-ooxml.version>
     </properties>
 
     <!-- 依赖管理 -->
@@ -60,10 +58,10 @@
         </dependency>
 
         <!-- SpringBoot Devtools -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-devtools</artifactId>-->
+        <!--        </dependency>-->
 
         <!-- SpringBoot + Tomcat 支持 -->
         <dependency>
@@ -154,11 +152,11 @@
             <version>${joda-time.version}</version>
         </dependency>
 
-        <!-- p6spy -->
+        <!-- poi-ooxml -->
         <dependency>
-            <groupId>p6spy</groupId>
-            <artifactId>p6spy</artifactId>
-            <version>${p6spy.version}</version>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${poi-ooxml.version}</version>
         </dependency>
 
         <!-- commons-text -->
@@ -182,12 +180,6 @@
             <version>${webjars-font-awesome.version}</version>
         </dependency>
 
-        <!-- poi-ooxml -->
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml</artifactId>
-            <version>${poi-ooxml.version}</version>
-        </dependency>
     </dependencies>
 
     <!-- Maven 打包设置 -->
