--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,8 +1,10 @@
 # 生产环境配置
 # 服务器端口
 server:
+  # 项目端口
   port: 8080
   servlet:
+    # session 过期时间 - 60分钟
     session:
       timeout: PT60M
 
@@ -10,45 +12,71 @@ server:
 spring:
   mvc:
     view:
+      # webMvc 页面前缀
       prefix: /WEB-INF/views/
+      # webMvc 页面后缀
       suffix: .jsp
 
   # 数据源配置
   datasource:
+    # 数据库访问地址
     url: jdbc:mysql:///exam-system-test?characterEncoding=utf8&useSSL=false
+    # 数据库驱动
     driver-class-name: com.mysql.jdbc.Driver
+    #数据库账号
     username: root
+    # 数据库密码
     password: 123456
+    # 数据库连接至配置
     hikari:
+      # 自动提交
       auto-commit: true
+      # 连接超时时间
       connection-timeout: 30000
+      # idle 超时
       idle-timeout: 600000
+      # 最大生命周期
       max-lifetime: 1800000
+      # 连接测试
       connection-test-query: SELECT 1
+      # 最大线程池配置
       maximum-pool-size: 25
+      # idle 最小值
       minimum-idle: 10
+      # 关闭只读数据库配置
       read-only: off
 
   # 线程池配置
   task:
     execution:
       pool:
+        # 核心数
         core-size: 10
+        # 最大数量
         max-size: 30
+        # 保持时间 - 60秒
         keep-alive: 60s
+        # 队列大小
         queue-capacity: 50
+        # 线程池名称
       thread-name-prefix: OES-pool-task-
     scheduling:
+      # 定时任务线程池名称
       thread-name-prefix: OES-scheduling-
+      # 池大小
       pool:
         size: 2
 
 # MyBatisPlus 配置
 mybatis-plus:
+  # 全局配置
   global-config:
+    # 关闭 MyBatisPlus 的 banner
     banner: off
+  # 实体类别名
   type-aliases-package: com.exam.entity
   configuration:
+    # 打开驼峰命名
     map-underscore-to-camel-case: true
 
 # PageHelper 分页插件配置
@@ -56,5 +84,7 @@ pagehelper:
   reasonable: false
   support-methods-arguments: true
   params: count=countSql
+  # 开启优化
   row-bounds-with-count: true
+  # 数据库方言 - MySQL
   helper-dialect: mysql
