--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -20,7 +20,7 @@ spring:
   # 数据源配置
   datasource:
     # 数据库访问地址
-    url: jdbc:mysql:///exam-system-test?characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql:///exam-system-test?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
     # 数据库驱动
     driver-class-name: com.mysql.jdbc.Driver
     #数据库账号
