[update] 完成试题管理模块更新需求

--- a/pom.xml
+++ b/pom.xml
@@ -103,11 +103,18 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
 
+        <!-- spring-boot-devtools -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!-- MySql 驱动 -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql-driver.version}</version>
+            <!-- <version>${mysql-driver.version}</version> -->
             <scope>runtime</scope>
         </dependency>
 
