--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -22,7 +22,7 @@ spring:
     # 数据库访问地址
     url: jdbc:mysql:///exam-system-test?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
     # 数据库驱动
-    driver-class-name: com.mysql.jdbc.Driver
+    # driver-class-name: com.mysql.jdbc.Driver
     #数据库账号
     username: root
     # 数据库密码
