[update] 完成教师端更新需求

--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,13 @@
             <artifactId>font-awesome</artifactId>
             <version>${webjars-font-awesome.version}</version>
         </dependency>
+        <!-- p6spy -->
+        <dependency>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
+            <version>3.8.7</version>
+        </dependency>
+
 
     </dependencies>
 
