--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <!-- 相关依赖统一版本管理 -->
     <properties>
         <java.version>1.8</java.version>
-        <hutool.version>5.1.3</hutool.version>
+        <hutool.version>5.1.4</hutool.version>
         <mysql-driver.version>5.1.48</mysql-driver.version>
         <mybatis-plus.version>3.3.1</mybatis-plus.version>
         <guava.version>28.2-jre</guava.version>
@@ -103,18 +103,11 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
 
-        <!-- spring-boot-devtools -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <optional>true</optional>
-        </dependency>
-
         <!-- MySql 驱动 -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <!-- <version>${mysql-driver.version}</version> -->
+            <version>${mysql-driver.version}</version>
             <scope>runtime</scope>
         </dependency>
 
@@ -187,13 +180,6 @@
             <artifactId>font-awesome</artifactId>
             <version>${webjars-font-awesome.version}</version>
         </dependency>
-        <!-- p6spy -->
-        <dependency>
-            <groupId>p6spy</groupId>
-            <artifactId>p6spy</artifactId>
-            <version>3.8.7</version>
-        </dependency>
-
 
     </dependencies>
 
