--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -7,6 +7,8 @@ server:
     # session 过期时间 - 60分钟
     session:
       timeout: PT60M
+  # 最大文件
+  max-http-header-size: 5MB
 
 # SpringMvc 配置
 spring:
