--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # 项目配置级别：[prod] = 生产环境
 spring.profiles.active=prod
 # 允许匿名访问的接口
-anon.uri=/,/admin/login,/teacher/login
+anon.uri=/,/student/login,/admin/login,/teacher/login
 # 静态资源匹配接口
 match.uri=/static/,/webjars/
 # 公共接口
