[update] 接入试卷信息缓存

--- a/oes-core/src/main/resources/application.properties
+++ b/oes-core/src/main/resources/application.properties
@@ -11,3 +11,5 @@ oes.sys.login_url=/login
 oes.sys.unauthorized_url=/unauthorized
 # 权限缓存前缀
 oes.cache.permission_prefix=oes:permission:
+# 试卷缓存
+oes.cache.paper_prefix=oes:paper:
