feat: 新增验证码模块

--- a/oes-core/src/main/resources/application.properties
+++ b/oes-core/src/main/resources/application.properties
@@ -13,3 +13,7 @@ oes.sys.unauthorized_url=/unauthorized
 oes.cache.permission_prefix=oes:permission:
 # 试卷缓存
 oes.cache.paper_prefix=oes:paper:
+#验证码前缀
+oes.cache.captcha_prefix=oes:captcha:
+#验证码时效
+oes.cache.captcha_expire=180
