--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.5.RELEASE</version>
+        <version>2.2.6.RELEASE</version>
         <relativePath/>
     </parent>
 
@@ -23,24 +23,23 @@
     <groupId>com.chachae.exam</groupId>
     <artifactId>oes</artifactId>
     <version>1.0</version>
-    <name>oes</name>
+    <name>${project.artifactId}</name>
     <packaging>pom</packaging>
 
     <!-- 相关依赖统一版本管理 -->
     <properties>
         <java.version>1.8</java.version>
-        <hutool.version>5.2.3</hutool.version>
+        <hutool.version>5.3.2</hutool.version>
         <mybatis-plus.version>3.3.1</mybatis-plus.version>
-        <guava.version>28.2-jre</guava.version>
-        <joda-time.version>2.10.5</joda-time.version>
-        <pageHelper.version>1.2.13</pageHelper.version>
+        <guava.version>29.0-jre</guava.version>
+        <joda-time.version>2.10.6</joda-time.version>
         <commons-text.version>1.8</commons-text.version>
-        <webjars-admin-lte.version>3.0.2</webjars-admin-lte.version>
+        <webjars-admin-lte.version>3.0.0</webjars-admin-lte.version>
         <webjars-font-awesome.version>5.12.0</webjars-font-awesome.version>
         <webjars-bootstrap.version>4.4.1-1</webjars-bootstrap.version>
         <webjars-bootstrap-table.version>1.16.0</webjars-bootstrap-table.version>
         <poi-ooxml.version>4.1.2</poi-ooxml.version>
-        <beetl.version>3.0.19.RELEASE</beetl.version>
+        <beetl.version>3.1.3.RELEASE</beetl.version>
     </properties>
 
     <!-- 依赖版本管理 -->
