--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
     <poi-ooxml.version>4.1.2</poi-ooxml.version>
     <beetl.version>3.1.3.RELEASE</beetl.version>
     <spring-admin.version>2.2.2</spring-admin.version>
+    <logstash-logback-encoder.version>6.3</logstash-logback-encoder.version>
   </properties>
 
   <!-- 依赖版本管理 -->
@@ -140,6 +141,12 @@
         <groupId>org.webjars.bower</groupId>
         <artifactId>bootstrap-table</artifactId>
         <version>${webjars-bootstrap-table.version}</version>
+      </dependency>
+      <!-- logstash -->
+      <dependency>
+        <groupId>net.logstash.logback</groupId>
+        <artifactId>logstash-logback-encoder</artifactId>
+        <version>${logstash-logback-encoder.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
